<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationManager</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add_new_place">AddNewPlaceActivity</string>

    <string name="title_activity_new_place">NewPlaceActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="meters">Meters</string>

    <string name="add_new_place_button">By GPS</string>
    <string name="geocoding_button">From Address</string>

    <string name="profile_name_hint">Enter profile name here</string>

    <string name="section_name_add_profile">Add Profile</string>
    <string name="section_name_set_radius">Set Radius</string>
    <string name="section_name_settings">Settings</string>

    <string name="radio_button_name_silent">Silent</string>
    <string name="radio_button_loud">Loud</string>
    <string name="radio_button_name_vibrate">Vibrate</string>

    <string name="check_box_name_wifi_enabled">Wi-Fi Enabled</string>

    <string name="address">Enter address</string>
    <string name="address_hint">Enter address here</string>
    <string name="button_confirm">Confirm</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity22">MainActivity22Activity</string>

    <string name="action_settings">Settings</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="settings_vibrate_title">Vibrate</string>
    <string name="settings_vibrate_summary">Enable vibration when location is found</string>
    <string name="settings_blink_title">Blinking LED</string>
    <string name="settings_blink_summary">Enable blinking when location is found</string>
    <string name="pref_title_update_time">Update Time</string>
    <string name="settings_update_title">Update Interval</string>
    <string name="settings_update_summary">Set the interval between updates</string>

</resources>
