<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_address"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/address_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm"
        android:id="@+id/submit_button"
        android:gravity="center_horizontal"
        android:layout_below="@+id/edit_text_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/address"
        android:id="@+id/textView8"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_above="@+id/edit_text_address"
        android:layout_centerHorizontal="true" />
</RelativeLayout>